src/test/run-pass/shebang.rs
#!/usr/bin/env rustx
// pp-exact

fn main() { io::println("Hello World"); }
