src/test/compile-fail/extenv-not-string-literal.rs
// error-pattern:requires a string

fn main() { #env(10); }